--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,14 @@ repositories {
 }
 
 dependencies {
+	annotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
+	testAnnotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
+	implementation("org.mapstruct:mapstruct:1.5.3.Final")
+	implementation("org.projectlombok:lombok-mapstruct-binding:0.2.0")
+	implementation 'com.google.oauth-client:google-oauth-client:1.34.0'
+	implementation 'com.google.api-client:google-api-client:2.0.0'
+	implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
