--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,9 @@ jwt:
   access-key-expiration-s: ${ACCESS_KEY_EXPIRATION_SECONDS}
   refresh-key-expiration-s: ${REFRESH_KEY_EXPIRATION_SECONDS}
 
+oauth:
+  google-client-id: ${GOOGLE_CLIENT_ID}
+  google-client-secret: ${GOOGLE_CLIENT_SECRET}
 
 logging:
   level:
