--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,12 @@ oauth:
   google-client-id: ${GOOGLE_CLIENT_ID}
   google-client-secret: ${GOOGLE_CLIENT_SECRET}
 
+thread:
+  pool:
+    core-pool-size: 4
+    queue-capacity: 50
+    max-pool-size: 8
+
 logging:
   level:
     org.hibernate.SQL: debug
