fix(designer): split 함수 사용 시 MeetingType, bio 분리 되는 문제 해결
외부 opencsv 핸들링 라이브러리 사용

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 
+	// csv 파싱
+	implementation 'com.opencsv:opencsv:5.5.2'
+
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
