결제 요청 및 승인 완료(응답 시 Amount 클래스 타입으로 변환 필요)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       database-platform: org.hibernate.dialect.MySQLDialect
       defer-datasource-initialization: true
     properties:
@@ -39,4 +39,8 @@ logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.type.descriptor.sql.BasicBinder: trace
+
+kakaopay:
+  secret-key: ${KAKAO_SECRET_KEY}
+  cid: ${CID}
 
