--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	implementation 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final' // MapStruct
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final' // MapStruct Processor
 	ext {
 		JJWT_VERSION = "0.12.5"
 	}
