--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,6 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation "org.mapstruct:mapstruct:1.5.3.Final"
-	implementation "org.projectlombok:lombok-mapstruct-binding:0.2.0"
 	implementation 'com.google.oauth-client:google-oauth-client:1.34.0'
 	implementation 'com.google.api-client:google-api-client:2.0.0'
 	implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
@@ -45,11 +44,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-	compileOnly 'org.projectlombok:lombok'
 	implementation 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.mapstruct:mapstruct:1.5.2.Final' // MapStruct
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final' // MapStruct Processor
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	implementation "org.projectlombok:lombok-mapstruct-binding:0.2.0"
+	tasks.withType(JavaCompile).configureEach {
+		options.compilerArgs << "-Amapstruct.verbose=true"
+	}
+
 	ext {
 		JJWT_VERSION = "0.12.5"
 	}
