--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
+  profiles:
+    include: aws
+  servlet:
+    multipart:
+      max-request-size: 10MB
+      max-file-size: 10MB
   application:
     name: hair_mvp
-
   config:
     import: "optional:file:.env[.properties]"  # .env ?? ?? ??
 
