--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	}
 
 	implementation 'com.google.http-client:google-http-client:1.41.1'
+	implementation 'com.google.apis:google-api-services-people:v1-rev20220531-2.0.0'
 	//implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.18.0-rc'
 	implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.25.0'
 	implementation 'com.google.auth:google-auth-library-oauth2-http:1.15.0'
