--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,3 +63,13 @@ kakaopay:
   secret-key: ${KAKAO_SECRET_KEY}
   cid: ${CID}
 
+cloud:
+  aws:
+    s3:
+      bucket: shiftbuket
+    stack.auto: false
+    region:
+      static: ap-northeast-2
+    credentials:
+      accessKey: ${AWS_S3_ACCESS_KEY}
+      secretKey: ${AWS_S3_SECRET_KEY}
