--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ java {
 	}
 }
 
+//bootJar {
+//	enabled = ㄹ // Spring Boot의 JAR 패키징을 활성화
+//}
+
+jar {
+	enabled = false
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
