--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,20 +27,20 @@ jobs:
       # 4. .env 파일 생성
       - name: Create .env file from GitHub secret
         run: |
-          echo "FL_DB_URL=${{ secrets.ACCESS_KEY_EXPIRATION_SECONDS }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.AWS_S3_ACCESS_KEY }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.AWS_S3_SECRET_KEY }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.DB_URL }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.DB_USERNAME }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.EC2_PUBLIC_IP }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.EC2_SSH_PRIVATE_KEY }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.REFRESH_KEY_EXPIRATION_SECONDS }}" >> .env
-          echo "FL_DB_USER_NAME=${{ secrets.SECRET_KEY }}" >> .env
+          echo "ACCESS_KEY_EXPIRATION_SECONDS=${{ secrets.ACCESS_KEY_EXPIRATION_SECONDS }}" >> .env
+          echo "AWS_S3_ACCESS_KEY=${{ secrets.AWS_S3_ACCESS_KEY }}" >> .env
+          echo "AWS_S3_SECRET_KEY=${{ secrets.AWS_S3_SECRET_KEY }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+          echo "DB_URL=${{ secrets.DB_URL }}" >> .env
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+          echo "DOCKER_HUB_ACCESS_TOKEN=${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" >> .env
+          echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env
+          echo "EC2_PUBLIC_IP=${{ secrets.EC2_PUBLIC_IP }}" >> .env
+          echo "EC2_SSH_PRIVATE_KEY=${{ secrets.EC2_SSH_PRIVATE_KEY }}" >> .env
+          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
+          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
+          echo "REFRESH_KEY_EXPIRATION_SECONDS=${{ secrets.REFRESH_KEY_EXPIRATION_SECONDS }}" >> .env
+          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
           
           
 
