--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,8 +31,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: true
-        format_sql: true
+        show_sql: false
+        format_sql: false
 
 jwt:
   secret-key: ${SECRET_KEY}
@@ -56,7 +56,7 @@ google:
 
 logging:
   level:
-    org.hibernate.SQL: debug
+    org.hibernate.SQL: error
     org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 kakaopay:
