feat : 디자이너 DTO에 프로필 이미지 필드 추가

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ out/
 
 
 .env
-.src/main/resources/google-calendar-credentials.json
+src/main/resources/google-calendar-credentials.json
 src/main/resources/local.env.env
 src/main/resources/application-aws.yml
 
